@@ -1,3 +1,25 @@
+package Dist::Zilla::Plugin::Author::SKIRMESS::TravisCI;
+
+use 5.006;
+use strict;
+use warnings;
+
+our $VERSION = '0.005';
+
+use Moose;
+
+with qw(
+  Dist::Zilla::Role::BeforeBuild
+);
+
+use Path::Tiny;
+
+use namespace::autoclean;
+
+sub before_build {
+    my ($self) = @_;
+
+    my $travis_yml = <<'TRAVIS_YML';
 language: perl
 perl:
   - '5.26'
@@ -19,3 +41,13 @@ script:
   - test -d xt/author && prove -lr xt/author
   - rm -f xt/release/manifest.t
   - test -d xt/release && prove -lr xt/release
+TRAVIS_YML
+
+    path('.travis.yml')->spew($travis_yml);
+
+    return;
+}
+
+1;
+
+# vim: ts=4 sts=4 sw=4 et: syntax=perl
